Actualizacion del Readme y vistas

--- a/PruebaTecnica/Views/Home/Index.cshtml
+++ b/PruebaTecnica/Views/Home/Index.cshtml
@@ -5,8 +5,8 @@
 
 <div class="container mt-4">
     <div class="text-center mt-4">
-        <a href="@Url.Action("AgregarLibro")" class="btn btn-primary mr-2">Agregar Nuevo Libro</a>
-        <a href="@Url.Action("AgregarAutor")" class="btn btn-secondary">Agregar Nuevo Autor</a>
+        <a href="@Url.Action("AgregarLibro")" class="btn btn-outline-primary mr-2">Agregar Nuevo Libro</a>
+        <a href="@Url.Action("AgregarAutor")" class="btn btn-outline-primary mr-2">Agregar Nuevo Autor</a>
     </div>
     <h2 class="text-center mb-4">Lista de Libros</h2>
 
