--- a/PruebaTecnica/Views/Home/AgregarAutor.cshtml
+++ b/PruebaTecnica/Views/Home/AgregarAutor.cshtml
@@ -12,6 +12,6 @@
             @Html.TextBoxFor(m => m.autorName, new { @class = "form-control", placeholder = "Ingrese el nombre del autor" })
         </div>
 
-        <button type="submit" class="btn btn-primary">Guardar</button>
+        <button type="submit" class="btn btn-outline-primary w-100 mr-20">Guardar</button>
     }
 </div>
