--- a/PruebaTecnica/Views/Home/AgregarLibro.cshtml
+++ b/PruebaTecnica/Views/Home/AgregarLibro.cshtml
@@ -21,7 +21,7 @@
             </div>
         </div>
 
-        <button type="submit" class="btn btn-primary">Guardar</button>
+        <button type="submit" class="btn btn-outline-primary w-100 mr-20">Guardar</button>
     }
 </div>
 
