--- a/PruebaTecnica/Views/Home/AgregarLibro.cshtml
+++ b/PruebaTecnica/Views/Home/AgregarLibro.cshtml
@@ -10,6 +10,7 @@
         <div class="form-group">
             <label for="Titulo">Título:</label>
             @Html.TextBoxFor(m => m.Titulo, new { @class = "form-control", placeholder = "Ingrese el título del libro" })
+            @Html.ValidationMessageFor(m => m.Titulo)
         </div>
 
         <div class="form-group">
@@ -18,6 +19,7 @@
                 <select asp-for="autorId" asp-items="@(ViewBag.Autores as SelectList)" class="form-control">
                     <option value="">Seleccione un autor</option>
                 </select>
+                @Html.ValidationMessageFor(m => m.autorId)
             </div>
         </div>
 
